--- a/firm/views/courts.ejs
+++ b/firm/views/courts.ejs
@@ -16,8 +16,8 @@
               <a class="nav-link" href="/judges">Judges</a>
             </div>
             <form class="d-flex" method="POST" action="/courts" novalidate>
-              <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search Courts</button>
+              <input class="form-control me-2" type="search" placeholder="Search Courts" name="search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
         </div>
