added more validation

--- a/firm/views/add-court.ejs
+++ b/firm/views/add-court.ejs
@@ -8,17 +8,14 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <a class="nav-link" aria-current="page" href="/">Home</a>
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
                   <a class="nav-link" href="/clients">Clients</a>
                   <a class="nav-link" href="/cases">Cases</a>
                   <a class="nav-link" href="/courts">Courts</a>
                   <a class="nav-link" href="/judges">Judges</a>
+                  
                 </div>
-                <form class="d-flex" method="POST" action="/courts" novalidate>
-                  <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search Courts</button>
-                </form>
               </div>
             </div>
           </nav>
