--- a/firm/views/add-case.ejs
+++ b/firm/views/add-case.ejs
@@ -8,17 +8,14 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <a class="nav-link" aria-current="page" href="/">Home</a>
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
                   <a class="nav-link" href="/clients">Clients</a>
                   <a class="nav-link" href="/cases">Cases</a>
                   <a class="nav-link" href="/courts">Courts</a>
                   <a class="nav-link" href="/judges">Judges</a>
+                  
                 </div>
-                <form class="d-flex" method="POST" action="/cases" novalidate>
-                  <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search Cases</button>
-                </form>
               </div>
             </div>
           </nav>
@@ -67,11 +64,11 @@
                                     <div class="row">
                                         <div class="mb-3 col-md-6">
                                             <label for="civil">Civil</label>
-                                            <input type="text" name="civil" class="form-control" placeholder="civil" id="civil" required>
+                                            <input type="text" name="civil" class="form-control" placeholder="Yes or No" id="civil" required>
                                         </div>
                                         <div class="mb-3 col-md-6">
                                             <label for="criminal">Criminal</label>
-                                            <input type="text" name="criminal" class="form-control" placeholder="Criminal" id="criminal" required>
+                                            <input type="text" name="criminal" class="form-control" placeholder="Yes or No" id="criminal" required>
                                         </div>
                                         <div class="col-md-12">
                                             <button class="btn btn-primary float-end" type="submit">Add Case</button>
