--- a/firm/views/add-client.ejs
+++ b/firm/views/add-client.ejs
@@ -1,7 +1,24 @@
 <%- include('partials/head')%>
 <body class="d-flex flex-column 100vh">
     <main class="container mt-5">
-        <%- include('partials/navbar')%>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">Res Judicata</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  <a class="nav-link" href="/clients">Clients</a>
+                  <a class="nav-link" href="/cases">Cases</a>
+                  <a class="nav-link" href="/courts">Courts</a>
+                  <a class="nav-link" href="/judges">Judges</a>
+                  
+                </div>
+              </div>
+            </div>
+          </nav>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/clients">Clients</a></li>
